update: github link added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <a href="">Resume</a>
         <i class="bx bxs-phone-call" style="color: #fff"></i>
         <i class="bx bxs-envelope" style="color: #fff"></i>
+        <a href="https://github.com/rakaprdana"
+          ><i class="bx bxl-github" style="color: #fff"></i
+        ></a>
       </ul>
     </nav>
     <div id="name">
